Add color,text, size and list style

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   background-color: #fff;
 }
 
+.sitenav-list {
+  list-style: none;
+}
+
 .sitenav-link {
   font-size: 13px;
   line-height: 15px;
@@ -113,25 +117,22 @@
   background-color: #f8f8f8;
 }
 
+.site-footer ul {
+  list-style: none;
+}
+
 .site-footer-divider {
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
 }
 
-
-
-
-/* .footer-links {
-  width: 1100px;
-  height: 229px;
-}
-
-.footer-link {
+.site-footer-links {
   width: 224px;
-  height: 19px;
 }
 
-.footer-link-text {
-  color: #252420;
+.site-footer-links a {
   font-size: 16px;
-} */
+  line-height: 19px;
+  text-decoration: none;
+  color: #252420;
+}
