--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+body {
+  font-family: "Roboto", "Arial", sans-serif;
+}
+
+
+
 /* SITE-HEADER */
 .site-header {
   background-color: #fff;
@@ -47,6 +53,7 @@
   font-size: 40px;
   line-height: 1.2;
   letter-spacing: 0.5px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
 }
 .hero-img {
   width: 550px;
@@ -65,6 +72,7 @@
   font-size: 72px;
   line-height: 1.2;
   letter-spacing: 0.5px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
 }
 
 /* FEATURE */
@@ -82,6 +90,7 @@
   font-size: 24px;
   line-height: 1.2;
   letter-spacing: 0.5px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
 }
 
 .feature-info {
@@ -103,6 +112,7 @@
 .promo-heading {
   font-size: 40px;
   line-height: 48px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
 }
 
 .promo-text {
