--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
+  font-size: 16px;
+  line-height: 1.5;
   font-family: "Roboto", "Arial", sans-serif;
+  letter-spacing: 0.5px;
 }
 
 
@@ -52,27 +55,22 @@ body {
 .hero-heading {
   font-size: 40px;
   line-height: 1.2;
-  letter-spacing: 0.5px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-family: "Roboto Condensed", "Roboto", "Arial", sans-serif;
 }
 .hero-img {
   width: 550px;
   height: 550px;
 }
 
-.hero-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.5px;
-}
+
 
 /* FEATURES */
 .features-heading {
   width: 440px;
   font-size: 72px;
   line-height: 1.2;
+  font-family: "Roboto Condensed", "Roboto", "Arial", sans-serif;
   letter-spacing: 0.5px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
 }
 
 /* FEATURE */
@@ -89,15 +87,9 @@ body {
 .feature-title {
   font-size: 24px;
   line-height: 1.2;
-  letter-spacing: 0.5px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-family: "Roboto Condensed", "Roboto", "Arial", sans-serif;
 }
 
-.feature-info {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.5px;
-}
 
 /* PROMO */
 .promo {
@@ -112,13 +104,9 @@ body {
 .promo-heading {
   font-size: 40px;
   line-height: 48px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-family: "Roboto Condensed", "Roboto", "Arial", sans-serif;
 }
 
-.promo-text {
-  font-size: 16px;
-  line-height: 1.5;
-}
 
 .promo-highlight {
   color: #ff7500;
@@ -146,11 +134,10 @@ body {
 
 .site-footer-links {
   width: 224px;
+  line-height: 19px;
 }
 
 .site-footer-links a {
-  font-size: 16px;
-  line-height: 19px;
   text-decoration: none;
   color: #252420;
 }
