--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,20 @@ body {
 
 /* SITE-HEADER */
 .site-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #fff;
+}
+
+.site-header-actions {
+  display: flex;
+  align-items: center;
 }
 
 /* SITENAV */
 .sitenav-list {
+  display: flex;
   list-style: none;
 }
 
@@ -38,6 +47,9 @@ body {
 
 /* HERO */
 .hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #252420;
   color: #fff;
 }
@@ -73,6 +85,12 @@ body {
   letter-spacing: 0.5px;
 }
 
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
 /* FEATURE */
 .feature {
   width: 340px;
@@ -93,6 +111,9 @@ body {
 
 /* PROMO */
 .promo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #252420;
   color: #fff;
 }
@@ -123,13 +144,27 @@ body {
   background-color: #f8f8f8;
 }
 
+.site-footer-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .site-footer ul {
   list-style: none;
+}
+
+.site-footer-socials {
+  display: flex;
 }
 
 .site-footer-divider {
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
+}
+
+.site-footer-bottom {
+  display: flex;
 }
 
 .site-footer-links {
