--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,19 @@ body {
   background-color: #fff;
 }
 
+.logo-link {
+  transition: opacity 0.4s ease;
+}
+
+.logo-link:hover {
+  opacity: 0.8;
+}
+
+.logo-link:active {
+  opacity: 0.6;
+}
+
+
 .site-header-actions {
   display: flex;
   align-items: center;
@@ -34,6 +47,16 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000;
+  transition: color 0.4s ease,
+  opacity 0.4s ease;
+}
+
+.sitenav-link:hover {
+  color: #ff7500;
+}
+
+.sitenav-link:active {
+  opacity: 0.6;
 }
 
 /* MAIN-LINK */
@@ -43,6 +66,15 @@ body {
   background-color: #ff7500;
   color: #fff;
   text-decoration: none;
+  transition: opacity 0.4s ease;
+}
+
+.main-link:hover {
+  opacity: 0.8;
+}
+
+.main-link:active {
+  opacity: 0.6;
 }
 
 /* HERO */
@@ -158,6 +190,19 @@ body {
   display: flex;
 }
 
+.site-footer-socials a {
+  color: #252420;
+}
+
+
+.site-footer-socials a:hover {
+  color: #ff7500;
+}
+
+.site-footer-socials a:active {
+  opacity: 0.6;
+}
+
 .site-footer-divider {
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
@@ -175,4 +220,14 @@ body {
 .site-footer-links a {
   text-decoration: none;
   color: #252420;
+  transition: color 0.4s ease,
+  opacity 0.6s ease;
+}
+
+.site-footer-links a:hover {
+  color: #ff7500;
+}
+
+.site-footer-links a:focus {
+  opacity: 0.6;
 }
