Update outline styles. Fix site-footer-link styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,10 @@ body {
   letter-spacing: 0.5px;
 }
 
-
+*:focus {
+  outline: 2px dotted orange;
+  outline-offset: 3px;
+}
 
 /* SITE-HEADER */
 .site-header {
@@ -228,6 +231,6 @@ body {
   color: #ff7500;
 }
 
-.site-footer-links a:focus {
+.site-footer-links a:active {
   opacity: 0.6;
 }
