--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,17 @@ body {
 .sitenav-list {
   display: flex;
   padding: 0;
+  margin: 0;
+  margin-right: 32px;
   list-style: none;
+}
+
+.sitenav-item {
+  margin-right: 32px;
+}
+
+.sitenav-item:last-child {
+  margin-right: 0;
 }
 
 .sitenav-link {
@@ -107,14 +117,26 @@ body {
   width: 80px;
   height: 3px;
   border: 0;
+  margin: 0;
+  margin-bottom: 40px;
   background-color: #ff7500;
 }
 
 .hero-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
   font-size: 40px;
   line-height: 1.2;
   font-family: "Roboto Condensed", "Roboto", "Arial", sans-serif;
 }
+
+.hero-text {
+  margin-top: 0;
+  margin-bottom: 32px;
+}
+
+
+
 .hero-img {
   width: 550px;
   height: 550px;
@@ -132,6 +154,8 @@ body {
 
 .features-heading {
   width: 440px;
+  margin-top: 0;
+  margin-bottom: 72px;
   font-size: 72px;
   line-height: 1.2;
   font-family: "Roboto Condensed", "Roboto", "Arial", sans-serif;
@@ -140,14 +164,19 @@ body {
 
 .features-list {
   display: flex;
-  justify-content: space-between;
   padding: 0;
+  margin: 0;
   list-style: none;
 }
 
 /* FEATURE */
 .feature {
   width: 340px;
+  margin-right: 40px;
+}
+
+.feature:last-child {
+  margin-right: 0;
 }
 
 .feature-icon-wrapper {
@@ -182,11 +211,25 @@ body {
 }
 
 .promo-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
   font-size: 40px;
   line-height: 48px;
   font-family: "Roboto Condensed", "Roboto", "Arial", sans-serif;
 }
 
+.promo-info-wrapper {
+  margin-bottom: 24px;
+}
+
+.promo-text {
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.promo-text:last-child {
+  margin-bottom: 0;
+}
 
 .promo-highlight {
   color: #ff7500;
@@ -221,12 +264,20 @@ body {
   display: flex;
   align-items: center;
   padding: 0;
+  margin: 0;
+}
+
+.site-footer-socials li {
+  margin-right: 16px;
+}
+
+.site-footer-socials li:last-child {
+  margin-right: 0;
 }
 
 .site-footer-socials a {
   color: #252420;
 }
-
 
 .site-footer-socials a:hover {
   color: #ff7500;
@@ -239,6 +290,8 @@ body {
 .site-footer-divider {
   height: 2px;
   border: 0;
+  margin-top: 40px;
+  margin-bottom: 64px;
   background-color: rgba(37, 36, 32, 0.5);
 }
 
@@ -248,14 +301,20 @@ body {
 
 .site-footer-links {
   width: 224px;
+  padding: 0;
+  margin: 0;
+  margin-right: 68px;
+  list-style: none;
   line-height: 19px;
+}
+
+.site-footer-links:last-child {
+  margin-right: 0;
 }
 
 .site-footer-links a {
   text-decoration: none;
   color: #252420;
-  transition: color 0.4s ease,
-  opacity 0.6s ease;
 }
 
 .site-footer-links a:hover {
