Remove unnecessary space under logos and logo images

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ body {
   opacity: 0.6;
 }
 
+.logo-link img {
+  display: block;
+}
 
 .site-header-actions {
   display: flex;
@@ -276,6 +279,7 @@ body {
 }
 
 .site-footer-socials a {
+  display: block;
   color: #252420;
 }
 
@@ -285,6 +289,10 @@ body {
 
 .site-footer-socials a:active {
   opacity: 0.6;
+}
+
+.site-footer-socials svg {
+  display: block;
 }
 
 .site-footer-divider {
